--- a/_headerFW.scss
+++ b/_headerFW.scss
@@ -4,124 +4,11 @@ $z_header : 100;
   @if header(font-color){color: header(font-color); }
   @if header(font-size){font-size: header(font-size); }
   &:before{@include pseudo(); top:-1px; width: 100%; background-color: inherit; height: 1px;}
-  // BANNER
-  & .headerFW__headbanner{@include flex-container(row,nowrap,flex-start,center);flex-shrink: 0; max-width: 100%;
-    & #logo{ padding: 0.5rem; }
-    // &>*:not(#logo){display: none;} 
-  }
+  
   // LOADER
   & .loader{position: absolute; font-size: 2em; right: 0; height: 100%; display: flex; align-items: center; padding: 0 1.5rem; opacity: 0.5;}
-  // NAV CONTAINER
-  & .headerFW__nav{ @include flex-container(); opacity: 0; visibility: hidden; transition: opacity 0.6s;
-    &.active{opacity: 1; visibility: visible;
-      &+.loader{display: none;}
-    }
-    // NAV TOGGLER
-    & .headerFW__nav__toggler{
-      opacity: 0;
-      visibility: hidden;
-      transition: all 0.6s;
-      height: 60px;
-      cursor: pointer;
-      position: absolute;
-      right: 0;
-      top: 0;
-      bottom: 0;
-      width: 45px;
-      margin: auto $spacing;
-      transform-style: preserve-3d;
-      transform: translate3d(0, 0, 0);
-      @include media-max(xxs){ margin: auto $spacing/2; width: 35px; }
-      & .bar{
-        height: 4px; width: 100%; background: body(font-color); border-radius: 10px; transition: all 0.4s; position: absolute;transform: translate3d(0,0,0);
-        &:nth-child(1){top: 13px; @include media-max(xxs){top: 16px;} }
-        &:nth-child(2){top: 28px}
-        &:nth-child(3){top: 43px; @include media-max(xxs){top: 40px;}}
-      }
-      &.active .bar{
-        &:nth-child(1){top: 28px;transform: rotate3d(0,0,1,-45deg);}
-        &:nth-child(2){opacity: 0;}
-        &:nth-child(3){top: 28px;transform: rotate3d(0,0,1,45deg);}
-      }
-    }
-    // NAV INLINE
-    & .headerFW__nav__inline{ min-height: 60px;
-      &>ul{@extend .reset; @include flex-container(); height: 100%;
-        & li{position: relative; white-space: nowrap;
-          &>*,
-          &>*:hover{color:inherit; text-decoration: none; font-weight: normal;}
-        }
-        &>li{
-          &>*:not(ul){@include size(100%); @include flex-container(row,nowrap,center,center); padding: 0 1rem; }
-          &.hover>ul,
-          &:hover>ul{opacity: 1; visibility: visible;transform: translateX(-50%) translateY(0); transition-delay: 0s;pointer-events: all;}
-          &:after{@include pseudo(); bottom: 0; left: 1px; right: 1px; background: link(font-color); height: 0; transition: height 0.2s;}
-          &.active, &.trail, &.hover, &:hover{
-            &:after{height: 5px;}
-          }
-          &>ul.offset-right{transform: translateX(0) translateY(-20%); left:auto; right: 0; }
-          &:hover>ul.offset-right,
-          &.hover>ul.offset-right{transform: translateX(0) translateY(0);}
-        }
-        & ul{
-          opacity: 0;
-          visibility: hidden;
-          transition: all .6s,transform 0.4s;
-          transition-delay: 0.2s;
-          z-index: $z_header+1;
-          position: absolute;
-          top: 80%;
-          left: 50%;
-          transform: translate(-50%,-20%);
-          padding: 0.6rem 0;
-          box-shadow: 0 5px 15px rgba(0, 0, 0, 0.6);
-          pointer-events: none;
-          @if header(background) {background-color: header(background); }
-          &>li{list-style: none;
-            &>*:not(ul){ padding: 0.5rem 2rem; display: block; }
-            &.active>*,
-            &.trail>*,
-            &.hover>*,
-            &:hover>*{ &:not(ul){text-decoration: underline; text-decoration: underline link(font-color);}}
-            &>ul{left: 95%; top: 20%; transform: translate(15%,0);  transition-delay: 0s;
-              &.offset-right{left: auto; right: 95%; transform: translate(-15%,0)}
-            }
-            &>ul:hover,
-            &.hover>ul,
-            &:hover>ul{opacity: 1; visibility: visible;transform: translate(0,0);  transition-delay: 0s;pointer-events: all;}
-          }
-        }
-      }
-    }
-    // NAV PANEL
-    & .headerFW__nav__panel{display: none; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; padding: 80px 0 1rem; font-size: 1.2rem; text-align: center; flex-direction: column; justify-content: center; align-items: center; transition: transform 0.6s; transform: translate3d(-100%,0,0); box-shadow: 0 5px 10px rgba(0,0,0,.3), inset 0 0 40px rgba(0,0,0,.06); background-color: #fff;
-      @if header(background) {background-color: header(background); }
-      &.active{transform: translate3d(0,0,0);}
-      & ul{display: flex; flex-direction: column;justify-content: center; flex-wrap: nowrap; list-style: none;  padding: 0;width: auto;min-width: 50%; margin: auto; margin-bottom: 0; position: relative; opacity: 0;visibility: hidden; height: 0; pointer-events: none; transition: all 0.8s; overflow: hidden;
-        & li{position: relative; @include flex-container(row,wrap,center); margin: 0 80px;
-          @include media-max(xxs){ margin: 0 60px;}
-          &>*:not(ul){color:inherit; text-decoration: none; font-weight: normal; padding: 0.6em; display: block; width: 100%;}
-          &>.toggler{ width: 60px; padding: 0; height: 100%;  cursor: pointer; position: absolute; right:-60px;
-            &:after{@include pseudo(); border: 4px solid rgba(body(font-color),1); opacity: 0.5; border-left: 0; border-top: 0; @include size(20px); border-bottom-right-radius: 2px;right: 20px; transition: all 0.4s; transform: translateX(-8px) rotateZ(-45deg); top: 0;bottom: 0;margin: auto;}
-            &:hover:after{opacity: 1;}
-          }
-          &.active>*,
-          &.trail>*,
-          &.hover>*,
-          &:hover>*{
-            &:not(ul){text-decoration: underline; text-decoration: underline link(font-color);}
-          }
-          &.trail>.toggler:after{border-color: link(font-color); opacity: 1;}
-        }
-        &.active{opacity: 1; visibility: visible; height: auto; height: fit-content; min-height: 100%; pointer-events: all;}
-        & .toggler--parent{position: absolute; right: 100%; width: 60px; font-size: 1.5em;height: auto; height: fit-content; margin: auto;  margin-right: -80px; cursor: pointer; transition: all 0.4s; opacity: 0.6;
-          @include media-max(xxs){margin-right: -60px;}
-          & span{font-size: 0.4em; font-style: italic; display: block; margin-top: -0.8em;}
-          &:hover{opacity: 1;}
-        }
-      }
-    }
-  }
+
+    
   // ARROWED
   &.nav--arrowed{
     & .headerFW__nav{
@@ -182,6 +69,124 @@ $z_header : 100;
         // height: 100%; width: 100%; display: block;
         &>img{height: 100%; width: 100%; object-fit: contain; object-position: left;}
       }
+    }
+  }
+}
+
+// BANNER
+.headerFW__headbanner{@include flex-container(row,nowrap,flex-start,center);flex-shrink: 0; max-width: 100%;
+  & #logo{ padding: 0.5rem; }
+  // &>*:not(#logo){display: none;} 
+}
+// NAV CONTAINER
+.headerFW__nav{ @include flex-container(); opacity: 0; visibility: hidden; transition: opacity 0.6s;
+  &.active{opacity: 1; visibility: visible;
+    &+.loader{display: none;}
+  }
+}
+
+// NAV TOGGLER
+.headerFW__nav__toggler{
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.6s;
+  height: 60px;
+  cursor: pointer;
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 45px;
+  margin: auto $spacing;
+  transform-style: preserve-3d;
+  transform: translate3d(0, 0, 0);
+  @include media-max(xxs){ margin: auto $spacing/2; width: 35px; }
+  & .bar{
+    height: 4px; width: 100%; background: body(font-color); border-radius: 10px; transition: all 0.4s; position: absolute;transform: translate3d(0,0,0);
+    &:nth-child(1){top: 13px; @include media-max(xxs){top: 16px;} }
+    &:nth-child(2){top: 28px}
+    &:nth-child(3){top: 43px; @include media-max(xxs){top: 40px;}}
+  }
+  &.active .bar{
+    &:nth-child(1){top: 28px;transform: rotate3d(0,0,1,-45deg);}
+    &:nth-child(2){opacity: 0;}
+    &:nth-child(3){top: 28px;transform: rotate3d(0,0,1,45deg);}
+  }
+}
+// NAV INLINE
+.headerFW__nav__inline{ min-height: 60px;
+  &>ul{@extend .reset; @include flex-container(); height: 100%;
+    & li{position: relative; white-space: nowrap;
+      &>*,
+      &>*:hover{color:inherit; text-decoration: none; font-weight: normal;}
+    }
+    &>li{
+      &>*:not(ul){@include size(100%); @include flex-container(row,nowrap,center,center); padding: 0 1rem; }
+      &.hover>ul,
+      &:hover>ul{opacity: 1; visibility: visible;transform: translateX(-50%) translateY(0); transition-delay: 0s;pointer-events: all;}
+      &:after{@include pseudo(); bottom: 0; left: 1px; right: 1px; background: link(font-color); height: 0; transition: height 0.2s;}
+      &.active, &.trail, &.hover, &:hover{
+        &:after{height: 5px;}
+      }
+      &>ul.offset-right{transform: translateX(0) translateY(-20%); left:auto; right: 0; }
+      &:hover>ul.offset-right,
+      &.hover>ul.offset-right{transform: translateX(0) translateY(0);}
+    }
+    & ul{
+      opacity: 0;
+      visibility: hidden;
+      transition: all .6s,transform 0.4s;
+      transition-delay: 0.2s;
+      z-index: $z_header+1;
+      position: absolute;
+      top: 80%;
+      left: 50%;
+      transform: translate(-50%,-20%);
+      padding: 0.6rem 0;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.6);
+      pointer-events: none;
+      @if header(background) {background-color: header(background); }
+      &>li{list-style: none;
+        &>*:not(ul){ padding: 0.5rem 2rem; display: block; }
+        &.active>*,
+        &.trail>*,
+        &.hover>*,
+        &:hover>*{ &:not(ul){text-decoration: underline; text-decoration: underline link(font-color);}}
+        &>ul{left: 95%; top: 20%; transform: translate(15%,0);  transition-delay: 0s;
+          &.offset-right{left: auto; right: 95%; transform: translate(-15%,0)}
+        }
+        &>ul:hover,
+        &.hover>ul,
+        &:hover>ul{opacity: 1; visibility: visible;transform: translate(0,0);  transition-delay: 0s;pointer-events: all;}
+      }
+    }
+  }
+}
+// NAV PANEL
+.headerFW__nav__panel{display: none; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; padding: 80px 0 1rem; font-size: 1.2rem; text-align: center; flex-direction: column; justify-content: center; align-items: center; transition: transform 0.6s; transform: translate3d(-100%,0,0); box-shadow: 0 5px 10px rgba(0,0,0,.3), inset 0 0 40px rgba(0,0,0,.06); background-color: #fff;
+  @if header(background) {background-color: header(background); }
+  &.active{transform: translate3d(0,0,0);}
+  & ul{display: flex; flex-direction: column;justify-content: center; flex-wrap: nowrap; list-style: none;  padding: 0;width: auto;min-width: 50%; margin: auto; margin-bottom: 0; position: relative; opacity: 0;visibility: hidden; height: 0; pointer-events: none; transition: all 0.8s; overflow: hidden;
+    & li{position: relative; @include flex-container(row,wrap,center); margin: 0 80px;
+      @include media-max(xxs){ margin: 0 60px;}
+      &>*:not(ul){color:inherit; text-decoration: none; font-weight: normal; padding: 0.6em; display: block; width: 100%;}
+      &>.toggler{ width: 60px; padding: 0; height: 100%;  cursor: pointer; position: absolute; right:-60px;
+        &:after{@include pseudo(); border: 4px solid rgba(body(font-color),1); opacity: 0.5; border-left: 0; border-top: 0; @include size(20px); border-bottom-right-radius: 2px;right: 20px; transition: all 0.4s; transform: translateX(-8px) rotateZ(-45deg); top: 0;bottom: 0;margin: auto;}
+        &:hover:after{opacity: 1;}
+      }
+      &.active>*,
+      &.trail>*,
+      &.hover>*,
+      &:hover>*{
+        &:not(ul){text-decoration: underline; text-decoration: underline link(font-color);}
+      }
+      &.trail>.toggler:after{border-color: link(font-color); opacity: 1;}
+    }
+    &.active{opacity: 1; visibility: visible; height: auto; height: fit-content; min-height: 100%; pointer-events: all;}
+    & .toggler--parent{position: absolute; right: 100%; width: 60px; font-size: 1.5em;height: auto; height: fit-content; margin: auto;  margin-right: -80px; cursor: pointer; transition: all 0.4s; opacity: 0.6;
+      @include media-max(xxs){margin-right: -60px;}
+      & span{font-size: 0.4em; font-style: italic; display: block; margin-top: -0.8em;}
+      &:hover{opacity: 1;}
     }
   }
 }
