--- a/_headerFW.scss
+++ b/_headerFW.scss
@@ -175,7 +175,10 @@ $z_header: 100 !default;
   // misc elements
   .loader{background: none; transition: opacity 0.4s; opacity: 0.6;}
   strong{font-weight: inherit;}
-  a,a:hover{color: inherit; text-decoration: none;}
+  a {
+    &,&:hover{text-decoration: none; color: inherit;}
+    &:is(%btn){color: var(--btn-font-color);}
+  }
 }
 .headerFW__wrapper{display: flex;justify-content: space-between; 
   background: inherit;
